# molt-os

./: .gitignore  BOUNTY_CONTRIBUTION.md  BOUNTY_MESH_DEMO.md  BOUNTY_README.md  CLAUDE.md  Cargo.toml  LICENSE  OPENCLAW-CLAUDE-MIGRATE.md  README.md  SOLUTION.md  flake.nix
crates/agentctl/: Cargo.toml
crates/agentctl/src/: main.rs
crates/agentd/: Cargo.toml
crates/agentd/src/: approval.rs  ledger.rs  main.rs  sandbox.rs  state.rs
crates/agentd/src/api/: agent_card.rs  approval.rs  backup.rs  discovery.rs  events.rs  health.rs  memory.rs  mod.rs  receipts.rs  sandbox.rs  system.rs
crates/agentos-egress/: Cargo.toml
crates/agentos-egress/src/: main.rs
crates/agentos-voice/: Cargo.toml
crates/agentos-voice/src/: main.rs  stt.rs  tts.rs  vad.rs
crates/osmoda-egress/: Cargo.toml
crates/osmoda-egress/src/: main.rs
crates/osmoda-keyd/: Cargo.toml
crates/osmoda-keyd/src/: api.rs  main.rs  policy.rs  receipt.rs  signer.rs  tx_eth.rs  tx_sol.rs
crates/osmoda-mcpd/: Cargo.toml
crates/osmoda-mcpd/src/: api.rs  main.rs  receipt.rs  server.rs
crates/osmoda-mesh/: Cargo.toml
crates/osmoda-mesh/src/: api.rs  gossip.rs  handshake.rs  identity.rs  invite.rs  main.rs  messages.rs  peers.rs  receipt.rs  room_store.rs  transport.rs
crates/osmoda-routines/: Cargo.toml
crates/osmoda-routines/src/: api.rs  main.rs  routine.rs  scheduler.rs
crates/osmoda-teachd/: Cargo.toml
crates/osmoda-teachd/src/: api.rs  knowledge.rs  learner.rs  main.rs  observer.rs  optimizer.rs  receipt.rs  skillgen.rs  teacher.rs  verifier.rs
crates/osmoda-voice/: Cargo.toml
crates/osmoda-voice/src/: main.rs  stt.rs  tts.rs  vad.rs
crates/osmoda-watch/: Cargo.toml
crates/osmoda-watch/src/: api.rs  fleet.rs  fleet_api.rs  main.rs  mesh_client.rs  switch.rs  validate.rs  watcher.rs
docs/: AGENTOS-PRODUCT-HUNT-STRATEGY.md  APP-PERSISTENCE-AUDIT.md  ARCHITECTURE.md  AUTH.md  CHANNELS.md  DEMO-GUIDE.md  DEMO-SCRIPT.md  GETTING-STARTED.md  GO-TO-MARKET.md  HERMES-INTEGRATION-PLAN.md  MCP-ECOSYSTEM.md  PRODUCTION-ROADMAP.md  README.md  ROADMAP.md  SECURITY.md  SETUP-INSTRUCTIONS.md  SKILL-LEARNING.md  SPAWN-API.md  STATUS.md  SWARM-PLAN.md  SWARM-PREDICT.md  USE-CASES.md  X402.md
docs/planning/: MASTER-PLAN.md  MEMORY-LLM-INTEGRATION.md  MEMORY-SYSTEM.md  TRENDABILITY-ANALYSIS.md
nix/hosts/: dev-vm.nix  hetzner.nix  iso.nix  server.nix
nix/modules/: agentos-setup.nix  agentos-shell.nix  agentos.nix  osmoda-setup.nix  osmoda-shell.nix  osmoda-ui.nix  osmoda.nix
nix/modules/plymouth-theme/: agentos.plymouth  agentos.script  default.nix  osmoda.plymouth  osmoda.script
scripts/: demo-break.sh  demo-setup.sh  deploy-hetzner.sh  install.sh  nginx-config-recovery-demo.sh  production-test-6node.sh
skills/app-deployer/: SKILL.md
skills/deploy-ai-agent/: SKILL.md
skills/drift-detection/: SKILL.md
skills/file-manager/: SKILL.md
skills/flight-recorder/: SKILL.md
skills/generation-timeline/: SKILL.md
skills/morning-briefing/: SKILL.md
skills/natural-language-config/: SKILL.md
skills/network-manager/: SKILL.md
skills/nix-optimizer/: SKILL.md
skills/predictive-resources/: SKILL.md
skills/scaled-swarm-predict/: SKILL.md
skills/security-hardening/: SKILL.md
skills/self-healing/: SKILL.md
skills/service-explorer/: SKILL.md
skills/spec-driven-development/: SKILL.md
skills/swarm-predict/: SKILL.md
skills/system-config/: SKILL.md
skills/system-monitor/: SKILL.md
skills/system-packages/: SKILL.md
src/os_moda_setup/: main.py
templates/: AGENTS.md  HEARTBEAT.md  IDENTITY.md  SOUL.md  TOOLS.md  USER.md
templates/agents/mobile/: AGENTS.md  SOUL.md
