[package]
name = "agentd"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
libc.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

axum = { version = "0.8", features = ["json"] }
hyper = "1"
hyper-util = { version = "0.1", features = ["tokio"] }
tower = "0.5"
rusqlite = { version = "0.32", features = ["bundled"] }
sha2 = "0.10"
hex = "0.4"
sysinfo = "0.33"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
tokio-stream = "0.1"

[dev-dependencies]
tempfile = "3"
