[package]
name = "osmoda-keyd"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

axum = { version = "0.8", features = ["json"] }
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
tower = "0.5"

# Crypto (lightweight — no full alloy/solana stacks)
k256 = { version = "0.13", features = ["ecdsa", "ecdsa-core"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
sha3 = "0.10"
zeroize = { version = "1", features = ["derive"] }
bs58 = "0.5"

# Key management
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
http-body-util = "0.1"

[dev-dependencies]
tempfile = "3"
