[package]
name = "osmoda-routines"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
tokio-util.workspace = true

axum = { version = "0.8", features = ["json"] }
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
tower = "0.5"
chrono = { version = "0.4", features = ["serde"] }
http-body-util = "0.1"

[dev-dependencies]
tempfile = "3"
