[package]
name = "osmoda-voice"
version.workspace = true
edition.workspace = true
description = "osModa voice daemon — STT (whisper.cpp) + TTS (piper) over PipeWire"

[dependencies]
anyhow.workspace = true
clap.workspace = true
libc.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

axum = { version = "0.8", features = ["json"] }
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
tower = "0.5"
uuid.workspace = true

[dev-dependencies]
tempfile = "3"
