[package]
name = "osmoda-watch"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
tokio-util.workspace = true

axum = { version = "0.8", features = ["json"] }
hyper = "1"
hyper-util = { version = "0.1", features = ["tokio"] }
tower = "0.5"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
http-body-util = "0.1"

[dev-dependencies]
tempfile = "3"
